ec2/cloudformation.yml
---
AWSTemplateFormatVersion: "2010-09-09"
#https://docs.aws.amazon.com/pt_br/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc.html
Description: >
  Template CF para construir uma instância EC2
  e toda estrutura básica de uma VPC

Parameters:
  VPCName:
    Type: String

  CidrBlock:
    Type: String
    Default: 10.0.0.0/16

  EnableDnsHostnames:
    Type: String
    Default: "true"

  EnableDnsSupport:
    Type: String
    Default: "true"

  InstanceTenancy:
    Type: String
    Default: "default"

  SubnetPublicaAssignIpv6:
    Type: String
    Default: "false"

  SubnetPublicaAZ:
    Type: String
    Default: "A"

  SubnetPublicaCidrBlock:
    Type: String
    # 1024 IPs
    Default: "10.0.0.1/22"

  SubnetPublicaPublicIpOnLaunch:
    Type: String
    Default: "true"

  EC2SecurityGroupName:
    Type: String

  EC2SecurityGroupIP:
    Type: String
    Default: "0.0.0.0/0"

  MinhaPrimeiraEC2Name:
    Type: String

  MinhaPrimeiraEC2Tenancy:
    Type: String
    Default: "default"

  MinhaPrimeiraEC2KeyPair:
    Type: String

Resources:
  MinhaVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlock
      EnableDnsHostnames: !Ref EnableDnsHostnames
      EnableDnsSupport: !Ref EnableDnsSupport
      InstanceTenancy: !Ref InstanceTenancy
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Project
          Value: POC

  MinhaSubnetPublica:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref SubnetPublicaAZ
      CidrBlock: !Ref SubnetPublicaCidrBlock
      MapPublicIpOnLaunch: !Ref SubnetPublicaPublicIpOnLaunch
      VpcId: !Ref MinhaVPC
      Tags:
        - Key: Project
          Value: POC
          Key: Name
          Value: !Sub "subnet-publica-${VPCName}-${SubnetPublicaAZ}"

  MeuInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Project
          Value: POC
        - Key: Name
          Value: !Sub "InternetGateway-${VPCName}"

  MeuInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MinhaVPC
      InternetGatewayId: !Ref MeuInternetGateway

  RouteTableSubnetPublica:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MinhaVPC
      Tags:
        - Key: Project
          Value: POC
        - Key: Name
          Value: !Sub "rtb-subnet-publica-${VPCName}-${SubnetPublicaAZ}"

  RouteSubnetPublicaIG:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref MeuInternetGateway
      RouteTableId: !Ref RouteTableSubnetPublica

  MinhaSubnetPublicaRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTableSubnetPublica
      SubnetId: !Ref MinhaSubnetPublica

  #Permite conexão via SSH para um determinado IP
  MinhaPrimeiraInstanciaSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref MinhaVPC
      GroupName: !Ref EC2SecurityGroupName
      GroupDescription: "Permite conexao via SSH para um determinado IP"
      SecurityGroupIngress:
        - CidrIp: !Ref EC2SecurityGroupIP
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
      Tags:
        - Key: Project
          Value: POC
        - Key: Name
          Value: !Sub "sg-allow-ssh-access-${VPCName}-${AWS::Region}"

  # EBSVolume:
  #   Type: AWS::EC2::Volume
  #   Properties:
  #     Size: 20
  #     AvailabilityZone: !Ref SubnetPublicaAZ
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
  MinhaPrimeiraInstancia:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Ref SubnetPublicaAZ
      SecurityGroupIds:
        - !GetAtt MinhaPrimeiraInstanciaSG.GroupId
      SubnetId: !Ref MinhaSubnetPublica
      Tenancy: !Ref MinhaPrimeiraEC2Tenancy
      InstanceType: t2.micro
      ImageId: ami-09b9b17384f68fd7c
      #Essa chave precisa ser criada no AWS Console antes
      KeyName: !Ref MinhaPrimeiraEC2KeyPair
      BlockDeviceMappings:
        - DeviceName: /dev/sdc
          VirtualName: ephemeral0
      Tags:
        - Key: Project
          Value: POC
        - Key: Name
          Value: !Sub "${MinhaPrimeiraEC2Name}-${SubnetPublicaAZ}"

  MinhaPrimeiraInstanciaIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref MinhaPrimeiraInstancia
      Tags:
        - Key: Project
          Value: POC

Outputs:
  MinhaVPC:
    Description: Exporta o valor do ID da VPC criada para ser utilizada por outros stacks
    Value: !Ref MinhaVPC
    Export:
      Name: MinhaPrimeiraVPC

  MinhaPrimeiraInstancia:
    Description: Exporta o valor do ID da instancia criada
    Value: !Ref MinhaPrimeiraInstancia
    Export:
      Name: MinhaPrimeiraInstanciaEC2

  MinhaPrimeiraInstancia:
    Description: Exporta o valor do Elastic IP
    Value: !Ref MinhaPrimeiraInstanciaIP
    Export:
      Name: MinhaPrimeiraInstanciaIP
